// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer > should render with many props assigned 1`] = `
<div>
  <div
    class="test-class width-full fixed inset-y-0 z-2 hidden overflow-hidden transition-all duration-1000 ease-in-out lg:block left-0"
  >
    <div
      class="size-full"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`Drawer > should render with required props 1`] = `
<div>
  <div
    class="width-full fixed inset-y-0 z-2 hidden overflow-hidden transition-all duration-1000 ease-in-out lg:block -left-full"
  >
    <div
      class="size-full"
    >
      Test
    </div>
  </div>
</div>
`;
